[gd_scene load_steps=9 format=3 uid="uid://c0f5uekku88hi"]

[ext_resource type="Script" uid="uid://detd1ets6qwr" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://cdxpeakhr8d2h" path="res://fonts/Xolonium-Regular.ttf" id="2_8sq4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
bg_color = Color(0.7939618, 0.49244773, 0.6263908, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640wx"]
bg_color = Color(0.6860994, 0, 0.12759778, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2258"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
bg_color = Color(0.113769375, 0.061833397, 0.15262091, 1)

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_bottom = 62.270004
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_8sq4i")
text = "0 P"
horizontal_alignment = 1

[node name="LifeLabel" type="Label" parent="."]
offset_left = 3.992981
offset_top = 3.9929962
offset_right = 114.68298
offset_bottom = 57.006996
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_640wx")
text = "5 LP"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.173096
offset_right = 77.173096
offset_bottom = 57.715607
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.52942
offset_top = -1.6105042
offset_right = 79.47058
offset_bottom = 59.389496
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_a2258")
text = "00:00"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -26.5
offset_right = 215.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_64ctp")
text = "Dodge the West!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.21001
offset_top = -140.0
offset_right = 101.78998
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Yeeee"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
